# hrunner

./: .gitignore  Config.hs  PrefixTree.hs  README.md  Subst.hs  Utils.hs  hrunner.cabal  runner.hs  stack.yaml
doc/example_shortcuts/: shortcuts_xfce
src/: Completion.hs  Config.hs  PrefixTree.hs  Subst.hs  Utils.hs  hrunner.hs  test.hs
