name:                hrunner
version:             0.1.0.0
synopsis:            A runner dialog for starting programs, searching web etc.
-- description:         
homepage:            https://github.com/holmisen/hrunner
license:             GPL-3
license-file:        LICENSE
author:              Johan Holmquist
maintainer:          holmisen@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable hrunner
  main-is:             hrunner.hs
  other-modules:       Config, PrefixTree, Subst, Utils
  hs-source-dirs:      src
  build-depends:       base >= 4.5 && < 4.7
                     , containers >= 0.4 && < 0.6
                     , directory >= 1.1 && < 1.3
                     , filepath == 1.3.*
                     , gtk >= 0.11 && < 0.13
                     , process == 1.1.*
