name:                hrunner
version:             1.2
synopsis:            A runner dialog for starting programs, searching web etc.
-- description:
homepage:            https://github.com/holmisen/hrunner
license:             GPL-3
license-file:        LICENSE
author:              Johan Holmquist
maintainer:          holmisen@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

executable hrunner
  main-is:             hrunner.hs
  other-modules:       Completion, Config, PrefixTree, Subst, Utils
  hs-source-dirs:      src

  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , gtk3
                     , process
                     , text
                     , transformers
